vbnc/vbnc/vbnc/tests/Errors/30060-25.vb
Imports System
Class T
    Const M_Boolean As Boolean = ""
End Class